add publish code

--- a/projects/simple-scroll-spy/package.json
+++ b/projects/simple-scroll-spy/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "simple-scroll-spy",
-  "version": "0.0.1",
+  "name": "angular-simple-scroll-spy",
+  "version": "0.0.2",
   "description": "",
   "repository": {
     "type": "git",
