--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "ng serve",
     "build:lib": "ng-packagr -p ./projects/simple-scroll-spy/ng-package.json",
-    "publish": "npm publish ./dist/simple-scroll-spy",
+    "publish": "npm publish --access=public ./dist/simple-scroll-spy",
     "pack": "npm pack ./dist/simple-scroll-spy"
   },
   "private": true,
