--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,38 @@
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
+    "compileOnSave": false,
+    "exclude": [
+        "**/*.spec.ts",
+        "./node_modules"
     ],
-    "lib": [
-      "es2017",
-      "dom"
+    "include": [
+        "src"
     ],
-    "paths": {
-      "simple-scroll-spy": [
-        "dist/simple-scroll-spy"
-      ],
-      "simple-scroll-spy/*": [
-        "dist/simple-scroll-spy/*"
-      ]
+    "compilerOptions": {
+        "module": "es2015",
+        "baseUrl": "./",
+        "outDir": "./dist/out-tsc",
+        "moduleResolution": "node",
+        "sourceMap": true,
+        "declaration": false,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "noImplicitAny": false,
+        "target": "ES6",
+        "types": [],
+        "typeRoots": [
+            "node_modules/@types"
+        ],
+        "lib": [
+            "es2017",
+            "dom"
+        ],
+        "paths": {
+            "simple-scroll-spy": [
+                "dist/simple-scroll-spy"
+            ],
+            "simple-scroll-spy/*": [
+                "dist/simple-scroll-spy/*"
+            ]
+        }
     }
-  }
 }
