--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "start": "ng serve",
         "build:lib": "ng-packagr -p ./projects/simple-scroll-spy/ng-package.json",
         "publish": "npm publish --access=public ./dist/simple-scroll-spy",
-        "pack": "npm pack ./dist/simple-scroll-spy"
+        "pack": "npm pack ./dist/simple-scroll-spy",
+        "all": " npm run build:lib && npm run pack && npm run publish"
     },
     "private": true,
     "dependencies": {
